fixed quantity alignment on product pages

--- a/front-end/src/app/products/product-all/product-all.component.scss
+++ b/front-end/src/app/products/product-all/product-all.component.scss
@@ -40,8 +40,14 @@
             }
         }
 
-        .available-qty {
-            padding-top: 1rem;
+        .qty {
+            margin: 1rem;
+            font-size: 1.4rem;
+            input {
+                width: 4rem;
+                height: 2rem;
+                text-align: center;
+            }
         }
 
         p {
